Changed color of connection text

--- a/views/trumpworld.html
+++ b/views/trumpworld.html
@@ -592,6 +592,7 @@
 	 						.append("tspan")
 	 						.attr("dy", "1.4em")
 	 						.attr("x", parseFloat(d3.select(this.parentNode).select(".label").attr("x")) + 40)
+	 						.style("fill", "#585858")
 	 						.text(function(d) { return "connection with " + selectedNodeID + ":" } )
  							.append("tspan")
 	 						.attr("dy", "1.4em")
