--- a/views/trumpworld.html
+++ b/views/trumpworld.html
@@ -3,10 +3,10 @@
 
 <head>
 	<title>Trump World</title>
-	<script src="d3.js" charset="utf-8"></script>
-	<script src="queue.min.js"></script>
-<!-- 	<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script> -->
+	<!-- <script src="d3.js" charset="utf-8"></script>
+	<script src="queue.min.js"></script> -->
+	<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
 </head>
 
 <style type="text/css">
@@ -204,8 +204,8 @@
 	  // console.log(d3.schemeCategory10);
 
 	  queue()
-	  	// .defer(d3.csv, "https://raw.githubusercontent.com/BuzzFeedNews/trumpworld/master/data/trumpworld.csv")
-	  	.defer(d3.csv, "trumpworld.csv")
+	  	.defer(d3.csv, "https://raw.githubusercontent.com/BuzzFeedNews/trumpworld/master/data/trumpworld.csv")
+	  	// .defer(d3.csv, "trumpworld.csv")
 	  	.await(ready);
 
 	  function slug (id) {
@@ -457,10 +457,6 @@
 	 			})
 
 	 			.on("click", function(d) {
-	 				console.log(d)
-	 				console.log(this)
-	 				console.log(d3.select(this))
-	 				console.log(d3.select(this).attr("class"))
  					// variables for use in if statements below
 	 				var clickClass = d3.select(this).attr("class");
 	 				var correspondingNodeSelection = d3.selectAll("." + clickClass);
@@ -553,7 +549,7 @@
 
 	 							var reference = d.reference;
 	 							console.log("reference: ", reference);
-	 							
+
 	 							var selCon = d3.select(".selectConnect");
 	 							selCon.classed(slugSource, true);
 	 							selCon.classed(slugTarget, true);
@@ -602,22 +598,22 @@
 		 				
 		 				getLabel.text(function(d) { return d.id; } )
 	 						.append("tspan")
-	 						.attr("dy", "1.4em")
+	 						.attr("dy", "1.5em")
 	 						.attr("x", parseFloat(d3.select(this.parentNode).select(".label").attr("x")) + 40)
 	 						.style("fill", "#585858")
 	 						.text(function(d) { return "connection with " + selectedNodeID + ":" } )
  							.append("tspan")
-	 						.attr("dy", "1.4em")
+	 						.attr("dy", "1.25em")
 	 						.attr("x", parseFloat(d3.select(this.parentNode).select(".label").attr("x")) + 40)
 	 						.text(function(d) { return entityConnection; } );
 
 	 					getLabelShadow.text(function(d) { return d.id; } )
 	 						.append("tspan")
-	 						.attr("dy", "1.4em")
+	 						.attr("dy", "1.5em")
 	 						.attr("x", parseFloat(d3.select(this.parentNode).select(".label").attr("x")) + 40)
 	 						.text(function(d) { return "connection with " + selectedNodeID + ":" } )
  							.append("tspan")
-	 						.attr("dy", "1.4em")
+	 						.attr("dy", "1.25em")
 	 						.attr("x", parseFloat(d3.select(this.parentNode).select(".label").attr("x")) + 40)
 	 						.text(function(d) { return entityConnection; } );
 	 				}
