--- a/views/trumpworld.html
+++ b/views/trumpworld.html
@@ -282,6 +282,17 @@
 					links = [],
 					listItems = [];
 
+			// LINKS
+			trumpworld.forEach(function(d) {
+				links.push({
+					"source" : d["Entity A"],
+					"target" : d["Entity B"],
+					"connection" : d["Connection"],
+					"reference" : d["Source(s)"]
+				})
+			});
+			// console.log("linkCount: " + links.length)
+
 			// NODES (NEW)
 			allOrgs.forEach(function(orgs) {
 				nodes.push({
@@ -302,6 +313,25 @@
 				})
 			});
 
+			var connectionCountList = {};
+
+			// Get Nodes' connection count
+			links.forEach(function(d) {
+				if (!connectionCountList[d.source]) {
+					connectionCountList[d.source] = 1
+				} else {
+					connectionCountList[d.source] += 1
+				};
+
+				if (!connectionCountList[d.target]) {
+					connectionCountList[d.target] = 1
+				} else {
+					connectionCountList[d.target] += 1
+				};
+			});
+
+			// console.log(connectionCountList);
+
 			// // NODES REFERENCE
 			// allEntitiesSet.forEach(function(orgs) {
 			// 	nodes.push({
@@ -310,16 +340,6 @@
 			// 	})
 			// });
 
-			// LINKS
-			trumpworld.forEach(function(d) {
-				links.push({
-					"source" : d["Entity A"],
-					"target" : d["Entity B"],
-					"connection" : d["Connection"],
-					"reference" : d["Source(s)"]
-				})
-			});
-			// console.log("linkCount: " + links.length)
 
 			// GRAPH
 			var graph = {
@@ -403,10 +423,21 @@
 
 	 		var clickHilightColor = "rgb(52, 255, 38)"
 
+	 		var buttonDiv = d3.select("#listDiv").append("div").attr("class", "buttonDiv");
+
+	 		var button = d3.select(".buttonDiv").append("button")
+
 	 		var ul = d3.select("#listDiv").append("ul")
 	 			.selectAll("li")
 	 			.data(nodes)
 	 			.enter().append("li")
+	 			.sort( function(a, b) {
+	 					if (a.id > b.id) {
+	 						return 1;
+	 					} else if (a.id < b.id) {
+	 						return -1;
+	 					} else { return 0; }
+	 				})
 	 			.attr("class", function(d) { return "T" + slug(d.id) })
 	 			.html(function(d) { return d.id } )
 	 			.style("color", function(d) { return color(d.type) })
@@ -501,6 +532,17 @@
 	 					d3.selectAll(".neighbouringLines")
 	 					.style("stroke-opacity", 1);
 	 			}); // on click callback
+
+	 			// // sort button
+	 			// button.on("click", function() {
+	 			// 	d3.selectAll("li").sort( function(a, b) {
+	 			// 		if (a.id > b.id) {
+	 			// 			return 1;
+	 			// 		} else if (a.id < b.id) {
+	 			// 			return -1;
+	 			// 		} else { return 0; }
+	 			// 	});
+	 			// })
 
 	 		var circleCatcher = node.append("circle")
 	 			.attr("r", 30)
