Temporarily removed button

--- a/views/trumpworld.html
+++ b/views/trumpworld.html
@@ -423,9 +423,9 @@
 
 	 		var clickHilightColor = "rgb(52, 255, 38)"
 
-	 		var buttonDiv = d3.select("#listDiv").append("div").attr("class", "buttonDiv");
+	 		// var buttonDiv = d3.select("#listDiv").append("div").attr("class", "buttonDiv");
 
-	 		var button = d3.select(".buttonDiv").append("button")
+	 		// var button = d3.select(".buttonDiv").append("button")
 
 	 		var ul = d3.select("#listDiv").append("ul")
 	 			.selectAll("li")
