--- a/views/trumpworld.html
+++ b/views/trumpworld.html
@@ -394,7 +394,7 @@
 			    link.style("stroke-width",stroke);
 			    circle.style("stroke-width",stroke * 1.5);
 
-			    console.log(link);
+			    console.log(circle.nodes());
 
 				var text_size = nominal_text_size ;
 					if (nominal_text_size * d3.event.transform.k > max_text_size) text_size = max_text_size / d3.event.transform.k;
