--- a/views/visualizations.html
+++ b/views/visualizations.html
@@ -71,7 +71,7 @@
 		    	<div class="container-fluid">
 					  <div class="row">
 
-							<div class="col-md-4 col-md-offset-2 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2">
+							<div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2">
 							    <div class="thumbnail_container">
 							      <div class="thumbnail">
 							      	<a href="quartet">
@@ -86,7 +86,22 @@
 
 							</div>
 
-							<div class="col-md-4 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2">
+							<div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2">
+							    <div class="thumbnail_container">
+							      <div class="thumbnail">
+							      	<a href="trumpworld">
+							        	<img src="trumpworld.png">
+							        </a>
+							      </div>
+							    </div> <!-- /thumbnail -->
+
+							    <div class = "caption">
+						         <h3><a href="trumpworld">Trumpworld</a></h3>
+						      </div> <!-- /caption -->
+
+							</div>
+
+							<div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2">
 						    <div class="thumbnail_container">
 						      <div class="thumbnail">
 						      	<a href="barley">
