--- a/public/trumpworld-style.css
+++ b/public/trumpworld-style.css
@@ -94,4 +94,14 @@
 	#selectorDiv {
 		margin-left: 22;
 		margin-top: 15;
+		/*z-index: 900;*/
+	}
+
+	#loader-wrapper {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		/*z-index: 1000;*/
 	}
