adjusted loader timing

--- a/public/trumpworld-style.css
+++ b/public/trumpworld-style.css
@@ -147,30 +147,12 @@
 			border-radius: 50%;
 			z-index: 1500;
 
-			-webkit-animation: spin 2s linear infinite;
-			animation: spin 2s linear infinite;
+			-webkit-animation: spin 1.6s linear infinite;
+			animation: spin 1.6s linear infinite;
 		}
 
 		/*#loader:before {*/
 		#loaderBefore {
-			display: block;
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			width: 140px;
-			height: 140px;
-			margin: -70px 0 0 -70px;
-
-			border: 3px solid transparent;
-			border-top-color: rgb(255, 127, 14);
-			border-radius: 50%;
-
-			-webkit-animation: spin 1.5s linear infinite;
-			animation: spin 1.5s linear infinite;
-		}
-
-		/*#loader:after {*/
-		#loaderAfter {
 			display: block;
 			position: absolute;
 			left: 50%;
@@ -180,9 +162,27 @@
 			margin: -65px 0 0 -65px;
 
 			border: 3px solid transparent;
+			border-top-color: rgb(255, 127, 14);
+			border-radius: 50%;
+
+			-webkit-animation: spin 1.2s linear infinite;
+			animation: spin 1.2s linear infinite;
+		}
+
+		/*#loader:after {*/
+		#loaderAfter {
+			display: block;
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			width: 110px;
+			height: 110px;
+			margin: -55px 0 0 -55px;
+
+			border: 3px solid transparent;
 			border-top-color: rgb(44, 160, 44);
 			border-radius: 50%;
 
-			-webkit-animation: spin 1s linear infinite;
-			animation: spin 1s linear infinite;
+			-webkit-animation: spin .8s linear infinite;
+			animation: spin .8s linear infinite;
 		}
