--- a/public/custom.css
+++ b/public/custom.css
@@ -1,5 +1,3 @@
-/*Set your CSS Styles*/
-
 html {
   /* android cover fix */
   height:100%;
@@ -57,37 +55,38 @@ body {
 }
 
 .full {
-  /*background: url('http://placehold.it/1920x1080') no-repeat center center fixed;*/
   background: url('tapetunnel-web.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  /* attempts to fix android malalignment */
   background-position: center center;
   height: 100%;
   overflow: hidden;
 }
+  /*background: url('http://placehold.it/1920x1080') no-repeat center center fixed;*/
+  /* attempts to fix android malalignment */
 
 .caption {
-  /*color: #f2f2f2;*/
   color: #333;
-  /*text-shadow: #ffffff 0 0 15px;*/
   text-shadow: #ffffff 0 0 15px, #ffffff 0 0 10px, #ffffff 0 0 4px;
 }
+  /*text-shadow: #ffffff 0 0 15px;*/
+  /*color: #f2f2f2;*/
 
 h3 > a {
   color: #333;
 }
 
-h3 > a:hover {
+.vizblock:hover > .caption > h3 > a {
+  /*border: 2px solid orange;*/
   color: white;
-  /*text-shadow: #bcf3ff 0 0 10px;*/
   text-decoration: none;
   transition: all ease-in-out .1s;
-  /*text-shadow: #bcf3ff 0 0 15px, #bcf3ff 0 0 10px, #bcf3ff 0 0 4px;*/
   text-shadow: #333 0 0 15px, #333 0 0 10px, #333 0 0 4px;
 }
+  /*text-shadow: #bcf3ff 0 0 10px;*/
+  /*text-shadow: #bcf3ff 0 0 15px, #bcf3ff 0 0 10px, #bcf3ff 0 0 4px;*/
 
 @media only screen and (max-width: 540px) {
   .tagline {
