--- a/views/visualizations.html
+++ b/views/visualizations.html
@@ -71,22 +71,7 @@
 		    	<div class="container-fluid">
 					  <div class="row">
 
-							<div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2">
-							    <div class="thumbnail_container">
-							      <div class="thumbnail">
-							      	<a href="quartet">
-							        	<img src="Quartet284.png">
-							        </a>
-							      </div>
-							    </div> <!-- /thumbnail -->
-
-							    <div class = "caption">
-						         <h3><a href="quartet">Anscombe's Quartet</a></h3>
-						      </div> <!-- /caption -->
-
-							</div>
-
-							<div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2">
+							<div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2 vizblock">
 							    <div class="thumbnail_container">
 							      <div class="thumbnail">
 							      	<a href="trumpworld">
@@ -95,13 +80,26 @@
 							      </div>
 							    </div> <!-- /thumbnail -->
 
-							    <div class = "caption">
+							    <div class="caption trumpworld">
 						         <h3><a href="trumpworld">Trumpworld</a></h3>
 						      </div> <!-- /caption -->
-
 							</div>
 
-							<div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2">
+							<div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2 vizblock">
+							    <div class="thumbnail_container">
+							      <div class="thumbnail">
+							      	<a href="quartet">
+							        	<img src="Quartet284.png">
+							        </a>
+							      </div>
+							    </div> <!-- /thumbnail -->
+
+							    <div class = "caption quartet">
+						         <h3><a href="quartet">Anscombe's Quartet</a></h3>
+						      </div> <!-- /caption -->
+							</div>
+
+							<div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2 vizblock">
 						    <div class="thumbnail_container">
 						      <div class="thumbnail">
 						      	<a href="barley">
@@ -110,10 +108,9 @@
 						      </div>
 						    </div> <!-- /thumbnail -->
 
-						    <div class = "caption">
+						    <div class = "caption barley">
 					        	<h3><a href="barley">Minnesota Barley Trial</a></h3>
 					      </div> <!-- /caption -->
-
 							</div>
 
 					  </div> <!-- /row -->
