--- a/public/trumpworld-style.css
+++ b/public/trumpworld-style.css
@@ -20,9 +20,11 @@
 
 	.d1 {
 		display: inline-block;
-		width: 20%;
-		min-width: 250px;
-		max-width: 350px;
+
+		width: 300px;
+		/*min-width: 250px;
+		max-width: 350px;*/
+
 		right: 0px;
 		height: 100%;
 		overflow: hidden;
@@ -36,6 +38,7 @@
 		position:relative;
 		max-height: 100%;
 		overflow:auto;
+		padding-right: 10px;
 	}
 
 	#listDiv {
@@ -98,9 +101,11 @@
 	}
 
 	#selectorDiv {
+		width: 260px;
 		padding-top: 10px;
 		padding-bottom: 10px;
 		padding-left: 20px;
+		/*padding-right: 20px;*/
 		position: fixed;
 		background-color: #f7f7f7;
 		z-index: 900;
