--- a/public/trumpworld-style.css
+++ b/public/trumpworld-style.css
@@ -101,7 +101,8 @@
 	}
 
 	#selectorDiv {
-		width: 260px;
+		width: 264px;
+		/*border: 1px solid black;*/
 		padding-top: 10px;
 		padding-bottom: 10px;
 		padding-left: 20px;
