--- a/public/trumpworld-style.css
+++ b/public/trumpworld-style.css
@@ -48,13 +48,18 @@
 	ul {
 		margin-top: 55px;
 		padding-left: 12px;
+		padding-left: 8px;
+		padding-top: 3px;
 	}
 
 	li {
   	padding-top: 10px;
   	padding-bottom: 10px;
-  	margin-left: 10px;
+  	padding-left: 7px;
+  	margin-left: 7px;
+  	margin-right: 6px;
   	list-style-type: none;
+  	border-radius: 7px;
 	}
 
 	li:hover {
