Beginning to create legend

--- a/public/trumpworld-style.css
+++ b/public/trumpworld-style.css
@@ -45,6 +45,14 @@
 		/*padding-top: 30px;*/
 	}
 
+	#legend {
+		border: 2px solid;
+		position:fixed;
+		bottom: 0;
+		width: 180px;
+		height: 120px;
+	}
+
 	ul {
 		margin-top: 55px;
 		padding-left: 12px;
